# experiments-django-deployment-on-render

./: db.sqlite3  pyproject.toml  render.yaml
project/: settings.py
