[tool.poetry]
name = "experiments-django-deployment-on-render"
version = "0.1.0"
description = ""
authors = ["Manoj Tyag <manoj.tyagi@limechat.ai>"]
readme = "README.md"
packages = [{include = "experiments_django_deployment_on_render"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
