[tool.poetry]
name = "experiments-django-deployment-on-render"
version = "0.1.0"
description = ""
authors = ["Manoj Tyagi <tyagimanojtyagi.22@gmail.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
